--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,6 @@ body {
 header {
     text-align: center;
     margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 h1 {
@@ -29,22 +26,10 @@ h1 {
     color: #0078FF;
 }
 
-.profile {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.profile-name {
+.username {
     font-size: 18px;
     font-weight: bold;
+    margin-top: 10px;
 }
 
 .stats {
